@@ -6,4 +6,5 @@
 #define CONVJACOBIAN_FVSPLUS 3
 #define CONVJACOBIAN_FDSPLUS 4
 #define CONVJACOBIAN_FDSR 5
+#define CONVJACOBIAN_HLL 6
 
